--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -22,78 +22,84 @@
 }
 
 @article{devlin2018bert,
-	title={BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding},
-	author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
-	journal={arXiv preprint arXiv:1810.04805},
-	year={2018}
+	title="BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding",
+	author="Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina",
+	journal="arXiv preprint arXiv:1810.04805",
+	year="2018"
 }
 
 @article{raffel2020exploring,
-	title={Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
-	author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
-	journal={Journal of Machine Learning Research},
-	volume={21},
-	number={140},
-	pages={1--67},
-	year={2020},
-	url={https://arxiv.org/abs/1910.10683}
+	title = "Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer",
+	author = "Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J",
+	journal = "Journal of Machine Learning Research",
+	volume = "21",
+	number = "140",
+	pages = "1--67",
+	year = "2020",
+	url = "https://arxiv.org/abs/1910.10683"
 }
 
 
 %% Journal article
 @article{Mousavi2025,
-	author    = {Seyed Mahed Mousavi and Simone Alghisi and Giuseppe Riccardi},
-	title     = {LLMs as Repositories of Factual Knowledge: Limitations and Solutions},
-	journal   = {arXiv preprint},
-	volume    = {arXiv:2501.12774v1},
-	year      = {2025},
-	month     = {Jan},
-	url       = {https://arxiv.org/abs/2501.12774v1},
-	note      = {Available at: \url{https://arxiv.org/abs/2501.12774v1}}
+	author    = "Seyed Mahed Mousavi and Simone Alghisi and Giuseppe Riccardi",
+	title     = "LLMs as Repositories of Factual Knowledge: Limitations and Solutions",
+	journal   = "arXiv preprint",
+	volume    = "arXiv:2501.12774v1",
+	year      = "2025",
+	month     = "Jan",
+	url       = "https://arxiv.org/abs/2501.12774v1"
+
 }
 
 @article{Howard2018,
-	author    = {Jeremy Howard and Sebastian Ruder},
-	title     = {Universal Language Model Fine-tuning for Text Classification},
-	journal   = {arXiv preprint},
-	volume    = {arXiv:1801.06146v5},
-	year      = {2018},
-	month     = {May},
-	url       = {https://arxiv.org/abs/1801.06146v5},
-	note      = {Available at: \url{https://arxiv.org/abs/1801.06146v5}}
+	author    = "Jeremy Howard and Sebastian Ruder",
+	title     = "Universal Language Model Fine-tuning for Text Classification",
+	journal   = "arXiv preprint",
+	volume    = "arXiv:1801.06146v5",
+	year      = "2018",
+	month     = "May",
+	url       = "https://arxiv.org/abs/1801.06146v5"
 }
 @article{zhuang2020comprehensive,
-	title={A Comprehensive Survey on Transfer Learning},
-	author={Zhuang, Fuzhen and Qi, Zhiyuan and Duan, Keyu and Xi, Dongbo and Zhu, Yongchun and Zhu, Hengshu and Xiong, Hui and He, Qing},
-	journal={Proceedings of the IEEE},
-	volume={109},
-	number={1},
-	pages={43--76},
-	year={2021},
-	publisher={IEEE}
+	title     = "A Comprehensive Survey on Transfer Learning",
+	author    = "Zhuang, Fuzhen and Qi, Zhiyuan and Duan, Keyu and Xi, Dongbo and Zhu, Yongchun and Zhu, Hengshu and Xiong, Hui and He, Qing",
+	journal   = "Proceedings of the IEEE",
+	volume    = "109",
+	number    = "1",
+	pages     = "43--76",
+	year      = "2021",
+	publisher = "IEEE"
 }
 
 @article{lewis2020retrieval,
-	title={Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks},
-	author={Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and others},
-	journal={Advances in Neural Information Processing Systems},
-	volume={33},
-	pages={9459--9474},
-	year={2020}
+	title     = "Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks",
+	author    = "Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and others",
+	journal   = "Advances in Neural Information Processing Systems",
+	volume    = "33",
+	pages     = "9459--9474",
+	year      = "2020"
+}
+
+@article{yuan2024hybrid,
+	title="A Hybrid RAG System with Comprehensive Enhancement on Complex Reasoning",
+	author="Ye Yuan and Chengwu Liu and Jingyang Yuan and Gongbo Sun and Siqi Li and Ming Zhang",
+	journal="arXiv preprint arXiv:2408.05141",
+	year="2024",
+	url="https://arxiv.org/abs/2408.05141"
 }
 
 
 %% Item 8. Book, chapter
 @inproceedings{karpukhin2020dpr,
-	title="Dense Passage Retrieval for Open-Domain Question Answering",
-	author="Karpukhin, Vladimir and Oguz, Barlas and Min, Sewon and Lewis, Patrick and Wu, Ledell and Edunov, Sergey and Chen, Danqi and Yih, Wen-tau",
-	booktitle="Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)",
-	pages="6769--6781",
-	year="2020",
-	organization="Association for Computational Linguistics",
-	address="online",
-	doi="10.18653/v1/2020.emnlp-main.550},
-	url={https://aclanthology.org/2020.emnlp-main.550"
+	title     = "Dense Passage Retrieval for Open-Domain Question Answering",
+	author    = "Karpukhin, Vladimir and Oguz, Barlas and Min, Sewon and Lewis, Patrick and Wu, Ledell and Edunov, Sergey and Chen, Danqi and Yih, Wen-tau",
+	booktitle = "Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)",
+	pages     = "6769--6781",
+	organization = "Association for Computational Linguistics",
+	address   = "online",
+	doi       = "10.18653/v1/2020.emnlp-main.550",
+	year      = "2020"
 }
 
 @article{blended_rag2024,
@@ -110,116 +116,106 @@
 
 
 @article{ding2024efficient,
-	title="Efficient Retrieval with Learned Similarities",
-	author="Ding, Bailu and Zhai, Jiaqi",
-	journal="arXiv preprint arXiv:2407.15462",
-	year="2024",
-	volume="2",
-	note="arXiv:2407.15462v2 [cs.IR] 14 Aug 2024"
-}
-%% book, authored
-@book{bib4,
-	author		= "Geddes, K. O. and Czapor, S. R. and Labahn, G.",
-	title			= "Algorithms for {C}omputer {A}lgebra",
-	address		= "Boston",
-	publisher		= "Kluwer",
-	year			= "1992"
+	title     = "Efficient Retrieval with Learned Similarities",
+	author    = "Ding, Bailu and Zhai, Jiaqi",
+	journal   = "arXiv preprint arXiv:2407.15462",
+	year      = "2024",
+	volume    = "2",
+	note      = "arXiv:2407.15462v2 [cs.IR] 14 Aug 2024"
 }
 
-%% Book, edited
-@book{bib6,
-  editor		= "Seymour, R. S.",
-  title			= "Conductive {P}olymers",
-  address		= "New {Y}ork",
-  publisher		= "Plenum",
-  year			= "1981"
+@inproceedings{Robertson1997,
+	author    = "S. E. Robertson and S. Walker",
+	title     = "On relevance weights with little relevance information",
+	booktitle = "SIGIR '97: Proceedings of the 20th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval",
+	year      = "1997",
+	editor    = "N. J. Belkin and A. D. Narasimhalu and P. Willett and W. R. Hersh and F. Can and E. M. Voorhees",
+	pages     = "16--24",
+	address   = "Philadelphia, PA, USA",
+	month     = "July 27-31",
+	publisher = "ACM",
+	doi       = "10.1145/258525.258529",
+	url       = "https://doi.org/10.1145/258525.258529",
+}
+@article{Zaragoza2009,
+	author    = "Hugo Zaragoza and Stephen E. Robertson",
+	title     = "The Probabilistic Relevance Framework: {BM25} and Beyond",
+	journal   = "Foundations and Trends{\textregistered} in Information Retrieval",
+	year      = "2009",
+	volume    = "3",
+	number    = "4",
+	pages     = "333--389",
+	month     = "January",
+	publisher = "Now Publishers",
+	doi       = "10.1561/1500000019",
+	url       = "https://doi.org/10.1561/1500000019",
 }
 
-%% Chapter in a book in a series with volume titles
-@inproceedings{bib7,
-  author		= "Smith, S. E.",
-  title			= "Neuromuscular blocking drugs in man",
-  editor		= "Zaimis, E.",
-  volume		= "42",
-  booktitle		= "Neuromuscular junction. {H}andbook of experimental pharmacology",
-  pages			= "593--660",
-  address		= "Heidelberg",
-  publisher		= "Springer",
-  year			= "1976"
+@inproceedings{Lafferty2001,
+	author    = "J. D. Lafferty and C. Zhai",
+	title     = "Document language models, query models, and risk minimization for information retrieval",
+	booktitle = "SIGIR 2001: Proceedings of the 24th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval",
+	year      = "2001",
+	editor    = "W. B. Croft and D. J. Harper and D. H. Kraft and J. Zobel",
+	pages     = "167--174",
+	address   = "New Orleans, Louisiana, USA",
+	month     = "September 9-13",
+	publisher = "ACM",
+	doi       = "10.1145/383952.383979",
+	url       = "https://doi.org/10.1145/383952.383979",
+}
+@inproceedings{Culpepper2016,
+	author    = "J. Shane Culpepper and Charles L. A. Clarke and Jimmy Lin",
+	title     = "Dynamic Cutoff Prediction in Multi-Stage Retrieval Systems",
+	booktitle = "Proceedings of the 21st Australasian Document Computing Symposium (ADCS 2016)",
+	year      = "2016",
+	address   = "Melbourne, Australia",
+	publisher = "ACM",
+	url       = "https://culpepper.io/publications/ccl16-adcs.pdf",
 }
 
-%% Paper presented at a conference
-@misc{bib8,
-  author		= "Chung, S. T. and Morris, R. L.",
-  title			= "Isolation and characterization of plasmid deoxyribonucleic acid from 
-					Streptomyces fradiae",
-  year			= "1978",
-  note			= "Paper presented at the 3rd international symposium on the genetics 
-					of industrial microorganisms, University of {W}isconsin, {M}adison, 
-					4--9 June 1978"
+@article{Zhou2021,
+	author    = "Jianghong Zhou and Eugene Agichtein",
+	title     = "RLIRank: Learning to Rank with Reinforcement Learning for Dynamic Search",
+	journal   = "arXiv preprint",
+	year      = "2021",
+	volume    = "arXiv:2105.10124",
+	month     = "May",
+	url       = "https://arxiv.org/pdf/2105.10124",
+	note      = "[cs.IR]",
 }
-
-%% Data citation example
-@misc{bib9,
-  author		= "Hao, Z. and AghaKouchak, A. and Nakhjiri, N. and Farahmand, A.",
-  title			= "Global integrated drought monitoring and prediction system (GIDMaPS) data sets", 
-  year			= "2014",
-  note			= "figshare \url{https://doi.org/10.6084/m9.figshare.853801}"
+@inproceedings{DynamicKNN2012,
+	author    = "Author Name(s)",  % Replace with actual author names if available
+	title     = "Dynamic selection of k nearest neighbors in instance-based learning",
+	booktitle = "2012 IEEE 13th International Conference on Information Reuse \& Integration (IRI)",
+	year      = "2012",
+	month     = "August 8-10",
+	publisher = "IEEE",
+	address   = "Las Vegas, NV, USA",
+	doi       = "10.1109/IRI.2012.6302995",
+	isbn      = "978-1-4673-2317-8",
+	note      = "Date Added to IEEE Xplore: 17 September 2012",
 }
-
-%% Preprint citation example
-@misc{bib10, 
-  author		= "Babichev, S. A. and Ries, J. and Lvovsky, A. I.",
-  title			= "Quantum scissors: teleportation of single-mode optical states by means 
-					of a nonlocal single photon", 
-  year			= "2002",
-  note			= "Preprint at \url{https://arxiv.org/abs/quant-ph/0208066v1}"
+@article{Zhu2024,
+	author    = "Chencheng Zhu and Tomoki Taniguchi and Kazutaka Shimada and Tomoko Ohkuma",
+	title     = "STAYKATE: Hybrid In-Context Example Selection Combining Representativeness Sampling and Retrieval-based Approach - A Case Study on Science Domains",
+	journal   = "arXiv preprint",
+	year      = "2024",
+	volume    = "arXiv:2412.20043",
+	month     = "December",
+	url       = "https://arxiv.org/pdf/2412.20043",
+	note      = "[cs.CL]",
 }
-
-@article{bib11,
-  author		= "Beneke, M. and Buchalla, G. and Dunietz, I.",
-  title			= "Mixing induced {CP} asymmetries in inclusive {B} decays",
-  journal		= "Phys. {L}ett.",
-  volume		= "B393",
-  year			= "1997",
-  pages			= "132-142",
-  archivePrefix		= "arXiv",
-  eprint		= "0707.3168",
-  primaryClass		= "gr-gc"
+@article{Hei2024,
+	author    = "Zijian Hei and Weiling Liu and Wenjie Ou and Juyi Qiao and Junming Jiao and Guowen Song and Ting Tian and Yi Lin",
+	title     = "DR-RAG: Applying Dynamic Document Relevance to Retrieval-Augmented Generation for Question-Answering",
+	journal   = "arXiv preprint",
+	year      = "2024",
+	volume    = "arXiv:2406.XXXXX",  % Replace with the actual arXiv ID if available
+	month     = "June",
+	note      = "Submitted on 11 Jun 2024 (v1), last revised 16 Jun 2024 (this version, v3)",
+	url       = "https://arxiv.org/abs/2406.XXXXX",  % Replace with the actual arXiv URL
 }
-
-@softmisc{bib12,
-  author		= "Stahl, B.",
-  title			= "deep{SIP}: deep learning of {S}upernova {I}a {P}arameters",
-  version		= "0.42",
-  keywords		= "Software",
-  howpublished		= "Astrophysics {S}ource {C}ode {L}ibrary",
-  year			= "2020",
-  month			= "Jun",
-  eid			= "ascl:2006.023",
-  pages			= "ascl:2006.023",
-  archivePrefix		= "ascl",
-  eprint		= "2006.023",
-  adsurl		= "{https://ui.adsabs.harvard.edu/abs/2020ascl.soft06023S}",
-  adsnote		= "Provided by the SAO/NASA Astrophysics Data System"
-}
-
-@article{bib13,
-  author = "Abbott, T. M. C. and others",
-  collaboration = "DES",
-  title = "{Dark Energy Survey Year 1 Results: Constraints on Extended Cosmological Models from Galaxy Clustering and Weak Lensing}",
-  eprint = "1810.02499",
-  archivePrefix = "arXiv",
-  primaryClass = "astro-ph.CO",
-  reportNumber = "FERMILAB-PUB-18-507-PPD",
-  doi = "10.1103/PhysRevD.99.123505",
-  journal = "Phys. Rev. D",
-  volume = "99",
-  number = "12",
-  pages = "123505",
-  year = "2019"
-}
-
 %%============================================================================%%
 %% while using chicago reference style, both abbreviated and expanded form of %%
 %% author name format is acceptable. Refer below example for expanded form    %%
